@startuml

hide empty members

class GameManager {
}

' MainModules
class Window {
    - HWND m_hWnd
    - HINSTANCE m_hInstance
    - Point m_screenSize
} 

class InputManager
class AudioManager
class FPSManager
class SceneManager
class AssetsManager
class Time
class Camera {
    + getViewMat()
    + getProjMat()
}
class LightParam

class GraphicsDevice {
    - ID3D11Device device
    - ID3D11DeviceContext deviceContext
}

' Scenes
Interface Scene {
    + Scene* update()
    + void draw()
}
class TitleScene
class StageScene {
    - ActorManager<Bullet>
    - ActorManager<Enemy>
    - ActorManager<Particle>
    - Player*
}

' Assets
class Model {
    + void createFromObj()
}
class BasicEffect
class Mesh
class Material
class Sprite
class Sprite2D

' Actors
class ActorManager<Actor> {
    - list<shared_ptr<Actor>> m_actors
    + void add()
    + void updateAll()
    + void drawAll()
}
Interface Actor {
    + void update()
    + void draw()
    + bool isEnabled()
}
class Enemy
class Player
class Score
class Bullet
class Particle

' GlobalFunctions
package Global {
    class Log
    class Random
    class Easing
}

GameManager o-- AssetsManager 
GameManager o-- Window
GameManager o-- GraphicsDevice
GameManager o-- InputManager
GameManager o-- AudioManager
GameManager o-- LightParam
GameManager o-- Camera
GameManager o-- FPSManager
GameManager o-- SceneManager
GameManager o-- Time

SceneManager *-- Scene

Scene <|.. TitleScene
Scene <|.. StageScene

AssetsManager o-- Model
AssetsManager o-- Sprite
AssetsManager o-- Sprite2D

Model o-- BasicEffect
Model o-- Mesh
Model o-- Material

Actor -d-* ActorManager
Actor <|.. Enemy
Actor <|.. Player
Actor <|.. Score
Actor <|.. Bullet
Actor <|.. Particle

ActorManager -d-o StageScene

@enduml